# Agenttraceshailesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
integrations/: README.md
integrations/anthropic/: README.md  agentrace_anthropic.py  example.atrace  example.py
integrations/crewai/: README.md  agentrace_crewai.py  example.atrace  example.py
integrations/langchain/: README.md  agentrace_langchain.py  example.atrace  example.py
saas/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
saas/prisma/: schema.prisma  seed.ts
saas/src/: middleware.ts
saas/src/app/: globals.css  layout.tsx  page.tsx
saas/src/lib/: api-key.ts  auth.ts  format.ts  trace-parser.ts  types.ts
sdks/python/: README.md  pyproject.toml
sdks/python/agentrace/: __init__.py  _emitter.py  _models.py  _validator.py  cli.py
sdks/python/agentrace/schemas/: v0.2.json
sdks/python/tests/: test_cli.py  test_emitter.py  test_validator.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: emitter.ts  index.ts  types.ts  validator.ts
sdks/typescript/tests/: emitter.test.ts  validator.test.ts
spec/: CHANGELOG.md
spec/v0.1/: README.md  schema.json
spec/v0.1/examples/: failed-run.atrace  minimal.atrace  multi-agent.atrace  tool-use.atrace
spec/v0.2/: README.md
spec/v0.2/examples/: custom-steps.atrace  memory-agent.atrace  react-loop.atrace  retry-with-backoff.atrace
viewer/: package-lock.json  package.json  tailwind.config.ts
viewer/src/app/: globals.css  layout.tsx  page.tsx
(+29 files in other folders)
