[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrace"
version = "0.2.0"
description = "Validate and emit AgentTrace files — the open standard for recording what AI agents do"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["agents", "llm", "observability", "tracing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
agentrace = "agentrace.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/shailesh2790/Agenttraceshailesh"
Repository = "https://github.com/shailesh2790/Agenttraceshailesh"
Changelog = "https://github.com/shailesh2790/Agenttraceshailesh/blob/main/spec/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
